@@ -1,124 +1,0 @@
-.\" DO NOT MODIFY THIS FILE!  It was generated by help2man
-.TH OFF_COLOR  "1" " " "off_color Antiprism 0.24.pre03 - http://www.antiprism.com" "User Commands"
-.SH NAME
-off_color - add colours to an OFF file
-.SH SYNOPSIS
-.B off_color
-[\fIoptions\fR] [\fIinput_file\fR]
-.SH DESCRIPTION
-Read a file in OFF format and add colours to it. If input_file is
-not given the program reads from standard input.
-.PP
-A colour value can be a single integer (a colour index), a value in
-form 'R,G,B,A' (3 or 4 values 0.0\-1.0, or 0\-255) or hex 'xFFFFFF', a
-colour name from the X11 colour map, 'invisible' or 'none' (which sets
-without any colour information)
-.PP
-Lowercase letters (except l) colour using index numbers and uppercase
-letters colour using colour values. Symmetric colourings are optionally
-followed, separated by commas, by a subsymmetry (Schoenflies notation)
-and a conjugation type (integer)
-.PP
-Options
-.HP
-\fB\-h\fR,\-\-help this help message (run 'off_util \fB\-H\fR help' for general help)
-.HP
-\fB\-\-version\fR version information
-.TP
-\fB\-f\fR <col>
-colour the faces according to:
-.IP
-a colour value \- apply to all faces
-u,U \- unique colour
-p,P \- minimal proper colouring
-s,S \- symmetric colouring [,sub_group,conj_type] (see above)
-n,N \- colour by number of sides
-a,A \- colour by average internal angle (to nearest degree)
-k,K \- sets of faces connected by face edges
-g,G \- gradient on z\-coordinate of normal
-c,C \- gradient on z\-coordinate of centroid
-L   \- lighting effect by normal (see option \fB\-l\fR)
-l   \- lighting effect by centroid (see option \fB\-l\fR)
-M   \- use colour map to convert existing colour index numbers
-.IP
-into to values
-.HP
-\fB\-E\fR <type> colour by edge type, e \- explicit edges, i \- implicit edges
-.IP
-I \- implicit edges which are not explicit edges (default: if \fB\-e\fR
-explicit and implicit, else explicit for mapping only)
-.TP
-\fB\-e\fR <col>
-colour the edges according to:
-.IP
-a colour value \- apply to all edges
-u,U \- unique colour
-p,P \- minimal proper colouring
-s,S \- symmetric colouring [,sub_group,conj_type] (see above)
-k,K \- sets of edges connected by edges
-F   \- colour with average adjoining face colour
-g,G \- gradient on z\-coordinate of edge direction
-c,C \- gradient on z\-coordinate of centroid
-L   \- lighting effect (see option \fB\-l\fR)
-M   \- use colour map to convert existing colour index numbers
-.IP
-into to values
-.TP
-\fB\-v\fR <col>
-colour the vertices according to:
-.IP
-a colour value \- apply to all vertices
-u,U \- unique colour
-p,P \- minimal proper colouring
-s,S \- symmetric colouring [,sub_group,conj_type] (see above)
-n,N \- colour by order of vertex
-a,A \- colour by avg internal ang of vert\-fig (to nearest deg)
-F   \- colour with average adjoining face colour
-E   \- colour with average adjoining edge colour
-c,C \- gradient on z\-coordinate
-L   \- lighting effect (see option \fB\-l\fR)
-M   \- use colour map to convert existing colour index numbers
-.IP
-into to values
-.HP
-\fB\-l\fR <file> lights for colouring type L in a file in OFF format, each
-.IP
-vertex and its colour gives a light direction and colour
-(default: a set of six lights giving a rainbow colouring
-.HP
-\fB\-m\fR <maps> a comma separated list of colour maps used to transform colour
-.IP
-indexes (default: rand), a part consisting of letters from
-v, e, f, selects the element types to apply the map list to
-(default 'vef').
-.HP
-\fB\-r\fR <rnge> Map HSVA values onto the specified HSVA ranges after other
-.IP
-processing (but before \fB\-I\fR), component letters are followed by
-one or two values separated by a colon e.g H0.5:0.8 followed by
-elements to map from v, e and f (H0:1,S0:1,V0:1,A0:1,vef)
-.HP
-\fB\-I\fR <elms> map color values to index numbers (after other procesing)
-.IP
-elements to map are from v, e and f (default none)
-.HP
-\fB\-w\fR <wdth> width of sphere containing points (default: calculated)
-.HP
-\fB\-U\fR <typs> colour only elements with particular current colour types:
-.IP
-u \- unset, i \- indexed, v \- visible colour value, x \- invisible.
-~ before the letter will select the opposite.
-.HP
-\fB\-o\fR <file> write output to file (default: write to standard output)
-.SH "SEE ALSO"
-The full documentation for
-.B off_color
-is maintained as a Texinfo manual.  If the
-.B info
-and
-.B off_color
-programs are properly installed at your site, the command
-.IP
-.B info off_color
-.PP
-should give you access to the complete manual.
