@@ -18,6 +18,7 @@ xx-xx-14 Adrian Rossiter <adrian@antiprism.com>
               -k don't orient
             zono: new option -S zonish polyhedra
             off_normals: options -t and -m removed
+            off_color: new edge direction colourings -e ldD
             antiview: 'O' to show orientation, 't' includes 50%
               transparency
          Fixes
